log/build_2024-11-27_17-19-52/myagv_ros2_debug/stderr.log
  File "/home/sara/myagv_ros2/install/myagv_ros2_debug/lib/python3.10/site-packages/myagv_ros2_debug/encoder_test.py", line 124
    pitch = math.copysign(#!/usr/bin/env python3
                         ^
SyntaxError: '(' was never closed

